--- a/index_old.html
+++ b/index_old.html
@@ -115,21 +115,22 @@ Ainda não atuei no mercado de tecnologia, estou buscando conhecimento para isso
                 action="https://formspree.io/f/xwkjnbky"
                 method="POST"
             >
-                <label>
-                    Email:
-                    <input type="email" name="email">
-                </label>
+                <h1>Entre em Contato</h1>
                 <label>
                     Nome:
-                    <input type="text" name="name">
+                    <input type="text" placeholder="Digite seu nome" name="name">
                 </label>
                 <label>
+                    Email:
+                    <input type="email" placeholder="Digite seu email" name="email">
+                </label>   
+                <label>
                     Telefone:
-                    <input type="text" name="fone">
+                    <input type="text" placeholder="(xx)####-####" name="fone">
                 </label>
                 <label>
                     Mensagem:
-                    <textarea name="message"></textarea>
+                    <textarea placeholder="Deixe sua Mensagem" name="message"></textarea>
                 </label>
                 <button type="submit">ENVIAR</button>
             </form>
