atualizção profile-button

--- a/index_old.html
+++ b/index_old.html
@@ -41,7 +41,7 @@
                         Fracasso é algo na vida, quando você nem tenta.
                     </span>
                     <a href="https://www.linkedin.com/in/heraclides-mour%C3%A3o-095035163/" target="_blank">
-                        <button class="profile-button">Acesse meu Linkedin</button>
+                        <button class="profile-button">Meu Linkedin</button>
                     </a>
                     <div class="divider"></div>
                     <div class="icons-container">
