--- a/index_old.html
+++ b/index_old.html
@@ -13,8 +13,12 @@
             <nav>
                 <ul>
                     <li>Home</li>
-                    <li>Projetos</li>
-                    <li>Tecnologias</li>
+                    <a href="#projetos">
+                       <li>Projetos</li>
+                    </a> 
+                    <a href="#tecnologias">
+                        <li>Tecnologias</li>
+                    </a>
                     <li>Contatos</li>
                 </ul>
             </nav>
@@ -28,7 +32,7 @@
 
         </svg>
     </div>
-    <div class="content-container">
+    <div class="content-container" id="tecnologias">
         <div class="profile-container">
             <div class="profile-content">
                 <div class="profile-card">
@@ -64,41 +68,35 @@
         <div class="project-container">
             <div class="project-content">
 
-                <div class="position-container rigth">
+                <div class="position-container rigth" id="projetos">
                     <div class="project-cards">
                         <img class="project-image" src="./batmanimage.jpeg" >
                         <p class="project-text">
-                            Lorem Ipsum é simplesmente um texto fictício da indústria
-                             tipográfica e de impressão. Lorem Ipsum tem sido o texto
-                              fictício padrão da indústria desde os anos 1500, quando um 
-                              impressor desconhecido pegou uma galera de tipos e os embaralhou 
-                              para fazer um livro de espécimes de tipos.    
+                           Projeto Batman é um site que foi criado com HTML, CSS e JS, no qual o intuto é simular a venda 
+                           de ingressos para assistir o filme, onde o cliente tem as informações do filma como trailer, sinopse,
+                           fotos dos atores que participaram do filme, e um botão de compra de ingresso que e redirecionado para uma pagina onde ele,
+                           escolhe o acento do cinema para fazer sua compra de ingresso.
+                                
                         </p>
                     </div>
                 </div>
 
                 <div class="position-container left">
                     <div class="project-cards card-reverse">
-                        <img class="project-image image-reverse" src="./projeto batman.jpeg" >
+                        <img class="project-image image-reverse" src="./Captura de tela 2024-09-01 220520.png" >
                         <p class="project-text">
-                            Lorem Ipsum é simplesmente um texto fictício da indústria
-                             tipográfica e de impressão. Lorem Ipsum tem sido o texto
-                              fictício padrão da indústria desde os anos 1500, quando um 
-                              impressor desconhecido pegou uma galera de tipos e os embaralhou 
-                              para fazer um livro de espécimes de tipos.    
+                            Criação do clone da tela de login do Instagran em HTML5 e CSS3. Totalmente responsivo e 
+                            com botões com links.
                         </p>
                     </div>
                 </div>
 
                 <div class="position-container rigth">
                     <div class="project-cards">
-                        <img class="project-image" src="./baner batmam.jpg" >
+                        <img class="project-image" src="./calculadora.png" >
                         <p class="project-text">
-                            Lorem Ipsum é simplesmente um texto fictício da indústria
-                             tipográfica e de impressão. Lorem Ipsum tem sido o texto
-                              fictício padrão da indústria desde os anos 1500, quando um 
-                              impressor desconhecido pegou uma galera de tipos e os embaralhou 
-                              para fazer um livro de espécimes de tipos.    
+                           Site demosntrativo de uma calculadora, criado em  Html, CSS e JavaScript, onde faz calculos
+                            dos principais operadores como adição, multiplicação, subtração e divisão.
                         </p>
                     </div>
                 </div>
